# Trabalho-SO-M3

./: .gitignore  CMakeLists.txt  Makefile  README.md  linker.ld
.cache/clangd/index/: lib.c.78BB9AB7568F7CA9.idx  main.c.3392D9DDACF01A25.idx
boot/: start.S  trap_entry.S
cmake/: riscv-toolchain.cmake
drivers/: block.c
include/: block.h  fs.h  lib.h  memory.h  scheduler.h  string.h  task.h  timer.h  trap.h  uart.h
kernel/: fs.c  main.c  memory.c  scheduler.c  string.c  task.c  timer.c  trap.c  uart.c
src/: context.S  lib.c  main.c  scheduler.c  string.c  task.c  user.S
